# Lab4_KG

./: .gitignore  CMakeLists.txt  Dockerfile  build.yml  devcontainer.json
core/: config.h  curveLog.txt  main.cpp
core/CCanvas/: CCanvas.cpp  CCanvas.h
core/CColorMath/: CColorMath.cpp  CColorMath.h
core/CFigure/: CFigure.cpp  CFigure.h
core/CImage/: CImage.cpp  CImage.h
core/CImageManager/: CImageManager.cpp  CImageManager.h
core/CImageTransfer/: CImageTransfer.cpp  CImageTransfer.h
core/CMainWindow/: CMainWindow.cpp  CMainWindow.h  CMainWindow.ui
core/CMouseObserver/: CMouseObserver.cpp  CMouseObserver.h
core/COverlayImage/: COverlayImage.cpp  COverlayImage.h
core/CPixelViewer/: CPixelViewer.cpp  CPixelViewer.h
core/CPointDialog/: CPointDialog.cpp  CPointDialog.h
core/CProperties/: CProperties.cpp  CProperties.h
core/CScene/: CScene.cpp  CScene.h
core/Figures/CBeziersCurve/: CBeziersCurve.cpp  CBeziersCurve.h
core/Figures/CFigure/: CFigure.cpp  CFigure.h
core/Figures/CHexagon/: CHexagon.cpp  CHexagon.h
core/Figures/CTriangle/: CTriangle.cpp  CTriangle.h
core/charts/: chart_3d.py  charts_2d.py
core/utils/: utils.cpp  utils.h
